objects/ccpt__Board__c.object
<CustomObject>
    <fields>
        <fullName>ccpt__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Boards</relationshipLabel>
        <relationshipName>Boards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt__Owner_Department__c</fullName>
        <formula>Owner:User.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpt__Percent_Complete__c</fullName>
        <formula>IF(ccpt__Total_Active__c &gt; 0 &amp;&amp; ccpt__Total_Incomplete__c &gt; 0, (ccpt__Total_Active__c - ccpt__Total_Incomplete__c) / ccpt__Total_Active__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ccpt__RelatedTo__c</fullName>
        <externalId>true</externalId>
        <label>Related To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpt__Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpt__Total_Active__c</fullName>
        <label>Total Active</label>
        <summarizedField>ccpt__Column__c.ccpt__Card_Count__c</summarizedField>
        <summaryFilterItems>
            <field>ccpt__Column__c.ccpt__OnHold__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ccpt__Column__c.ccpt__Board__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccpt__Total_Incomplete__c</fullName>
        <label>Total Incomplete</label>
        <summarizedField>ccpt__Column__c.ccpt__Card_Count__c</summarizedField>
        <summaryFilterItems>
            <field>ccpt__Column__c.ccpt__IsComplete__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ccpt__Column__c.ccpt__OnHold__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ccpt__Column__c.ccpt__Board__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccpt_ccpx__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Boards</relationshipLabel>
        <relationshipName>Boards</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingReasons>
        <fullName>ccpt__Manage__c</fullName>
        <label>Manage</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ccpt__View__c</fullName>
        <label>View</label>
    </sharingReasons>
</CustomObject>